--- a/.github/workflows/update.yaml
+++ b/.github/workflows/update.yaml
@@ -26,7 +26,7 @@ jobs:
         uses: actions/cache@v3
         with:
           path: cache
-          key: data-${{ hashFiles('cache/**') }}
+          key: pr-data
 
       - name: Update
         env:
