--- a/.github/workflows/update.yaml
+++ b/.github/workflows/update.yaml
@@ -22,10 +22,13 @@ jobs:
           fetch-depth: 0
 
       - name: Fetch last run data
+        env:
+          OWNER: ${{ github.event.repository.owner.login }}
+          REPO_NAME: ${{ github.event.repository.name }}
         continue-on-error: true
         run: |
           mkdir cache
-          wget --progress=dot https://fabiobaltieri.github.io/pr-dashboard/raw-prs.json.bz2 -O cache/prs.json.bz2
+          wget --progress=dot https://$OWNER.github.io/$REPO_NAME/raw-prs.json.bz2 -O cache/prs.json.bz2
           bunzip2 cache/prs.json.bz2
 
       - name: Update
