--- a/.github/workflows/update.yaml
+++ b/.github/workflows/update.yaml
@@ -18,12 +18,18 @@ jobs:
     steps:
 
       - name: Install Python dependencies
-        run: pip3 install -U PyGithub
+        run: pip3 install -U PyGithub west
 
       - name: Checkout
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
+
+      - name: Setup the manifest data
+        run: |
+          mkdir -p west/submanifests
+          wget --progress=dot https://raw.githubusercontent.com/zephyrproject-rtos/zephyr/main/west.yml -O west/west.yml
+          west init -l west
 
       - name: Fetch last run data
         env:
@@ -39,7 +45,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          ./update_pr.py
+          ./update_zephyr_pr.py
           bzip2 -c cache/data_dump.json > public/data_dump.json.bz2
 
       - name: Crunch
