set up an explicit python version

--- a/.github/workflows/update.yaml
+++ b/.github/workflows/update.yaml
@@ -25,6 +25,11 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: 3.11
+
       - name: Setup the manifest data
         run: |
           mkdir -p west/submanifests
