add a failure step to upload debugging data

--- a/.github/workflows/update.yaml
+++ b/.github/workflows/update.yaml
@@ -47,6 +47,14 @@ jobs:
         run: |
           python -u crunch_data.py
 
+      - name: Upload debugging artifacts (fail only)
+        if: failure()
+        uses: actions/upload-artifact@v4
+        with:
+          if-no-files-found: ignore
+          path:
+            public/
+
       - name: Setup pages
         uses: actions/configure-pages@v3
 
