workflow: redirect stderr to stdout
Script exception data seems to be mixed with the normal output for some
rasons, try to redirect stderr to stdout to see if that helps.

--- a/.github/workflows/update.yaml
+++ b/.github/workflows/update.yaml
@@ -40,12 +40,12 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           mkdir cache
-          python -u update_zephyr_pr.py
+          python -u update_zephyr_pr.py 2>&1
           bzip2 -c cache/data_dump.json > public/data_dump.json.bz2
 
       - name: Crunch
         run: |
-          python -u crunch_data.py
+          python -u crunch_data.py 2>&1
 
       - name: Upload debugging artifacts (fail only)
         if: failure()
